delete CategoryController (soalnya itu Controller dummy buat tugas Swagger dulu)
