# storage/api-docs/api-docs.json
@@ -347,40 +347,6 @@
                 ]
             }
         },
-        "/category": {
-            "get": {
-                "tags": [
-                    "Category"
-                ],
-                "summary": "List of Categories",
-                "description": "Retrieve a list of book categories",
-                "operationId": "listCategory",
-                "responses": {
-                    "200": {
-                        "description": "Successful operation",
-                        "content": {
-                            "application/json": {
-                                "schema": {},
-                                "example": {
-                                    "success": true,
-                                    "message": "Successfully retrieved categories",
-                                    "data": [
-                                        {
-                                            "id": 1,
-                                            "name": "Fiction"
-                                        },
-                                        {
-                                            "id": 2,
-                                            "name": "Non-Fiction"
-                                        }
-                                    ]
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/departemen-swagger": {
             "get": {
                 "tags": [
@@ -2326,10 +2292,6 @@
         {
             "name": "Absensi",
             "description": "Absensi"
-        },
-        {
-            "name": "Category",
-            "description": "Category"
         },
         {
             "name": "Gaji",
